--- a/src/css/style.css
+++ b/src/css/style.css
@@ -86,5 +86,5 @@ background-color: rgb(41, 41, 41);
 .Preview {
     border: 5px solid rgb(0, 0, 0);
     /* border-radius: 5px; */
-    border-color: black;
+    border-color: rgb(128, 79, 15);
 }
